# dotfiles

./: .dockerignore  .gitignore  .gitmodules  .mypy.ini  Dockerfile  Makefile  README.markdown  README.md  noxfile.py  pyproject.toml
.dotfiles/: .stow-local-ignore.global  combine-files  combine-files-py  make-stow-local-ignore
.dotfiles/dotfiles/: __main__.py
.dotfiles/t/: 0000-combine-files-py.sh
alacritty/: .alacritty.yml
backup/: .gitignore  .stow-local-ignore.local  README.md  pyproject.toml
backup/.gitignore_global.d/: backup.gitignore
backup/src/backup/: __init__.py  cli.py  filtering.py  restic.py
backup/tests/: conftest.py  test_cli.py  test_filtering.py  test_restic.py  util.py
backups/.profile.d/: backups.sh
bash/: .bashrc
dircolors/: .dircolors
dircolors/.profile.d/: dircolors.sh
dotfiles/: .stow-local-ignore.global
editline/: .gitignore  .stow-local-ignore.global  README.md
emacs/: .emacs-profiles.el  .spacemacs  README.md
gdb/: .gdbinit
ghci/: .haskeline
ghci/.ghc/: ghci.conf
git/: .gitconfig  .gitignore  .gitignore_global  .stow-local-ignore.global  README.md
git-bark/: README.md  noxfile.py  pyproject.toml
git-bark/src/git_bark/: __init__.py  __main__.py
git-bark/tests/: test_basics.py
git-bark/tests/lib/: subprocess_script.py
jetbrains/: .ideavimrc
python/: .pdbrc  .stow-local-ignore.global
readline/: .inputrc
ruby/: .pryrc
shell/: .profile
ssh/: README.md
tmux/: .tmux.conf  README.md
ubuntu-packaging/: .pbuilderrc
vim/: .vimrc
vv/: .stow-local-ignore.local  Makefile
zsh/: .zprofile  .zshrc
(+68 files in other folders)
